--- a/src/RetryCore/RetryCore.csproj
+++ b/src/RetryCore/RetryCore.csproj
@@ -9,4 +9,9 @@
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>RetryCore.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
