--- a/src/RetryCore/RetryCore.csproj
+++ b/src/RetryCore/RetryCore.csproj
@@ -8,7 +8,7 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<LangVersion>latest</LangVersion>
 
-    <Version>0.3.2</Version>
+    <Version>0.3.3</Version>
     <PackageId>$(AssemblyName)</PackageId>
     <Description>A library for retrying operations.</Description>
     <Authors>jerviscui</Authors>
@@ -17,14 +17,13 @@
     <Copyright>Copyright 2023 $(Authors)</Copyright>
     <PackageIcon></PackageIcon>
     <PackageProjectUrl>https://github.com/jerviscui/Retry</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/jerviscui/Retry/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/jerviscui/Retry</RepositoryUrl>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <IsPackable>True</IsPackable>
-    
+    <IsPackable>True</IsPackable>    
 	</PropertyGroup>
 
   <ItemGroup>
